<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>io.github.pspaces</groupId>
	<artifactId>jspace</artifactId>
	<version>1.0-SNAPSHOT</version>

	<name>jSpace: Programming with Spaces in Java</name>

	<description>
		A java framework for programming concurrent and distributed applications based on spaces.
	</description>

	<url>https://pspaces.github.io/jSpace/</url>

	<developers>
		<developer>
			<name>Alberto Lluch Lafuente</name>
			<roles>
				<role>architect</role>
				<role>developer</role>
			</roles>
		</developer>
		<developer>
			<name>Michele Loreti</name>
			<roles>
				<role>architect</role>
				<role>developer</role>
			</roles>
		</developer>
		<developer>
			<name>Francesco Terrosi</name>
			<roles>
				<role>developer</role>
			</roles>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>Eclipse Public License</name>
			<url>https://www.eclipse.org/legal/epl-v10.html</url>
		</license>
	</licenses>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>21</maven.compiler.release>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.13.2</version>
		</dependency>
	</dependencies>

	<distributionManagement>
		<repository>
			<id>bintray-michele-loreti-jspace-repo</id>
			<name>michele-loreti-jspace-repo</name>
			<url>https://api.bintray.com/maven/pspaces/jspace-repo/jspace/;publish=1</url>
		</repository>
	</distributionManagement>

</project>
